# sdk

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
fern/: fern.config.json  generators.yml
scripts/: sync-openapi.sh
sdks/python/: README.md  pyproject.toml
sdks/python/src/a11yfy/: .fernignore  README.md  __init__.py  _default_clients.py  client.py  custom_client.py  environment.py  reference.md  webhooks.py
sdks/python/src/a11yfy/billing/: client.py  raw_client.py
sdks/python/src/a11yfy/certificates/: client.py  raw_client.py
sdks/python/src/a11yfy/core/: client_wrapper.py
sdks/python/src/a11yfy/errors/: __init__.py  content_too_large_error.py  service_unavailable_error.py
sdks/python/src/a11yfy/jobs/: __init__.py  client.py  raw_client.py
sdks/python/src/a11yfy/jobs/types/: __init__.py  list_jobs_request_status.py
sdks/python/src/a11yfy/tests/: test_aiohttp_autodetect.py
sdks/python/src/a11yfy/types/: __init__.py  api_error.py  balance_response.py  certificate_info.py  certificate_info_treatment.py  certificate_list_response.py  job_accepted_response.py  job_accepted_response_status.py  job_accepted_response_webhook.py  job_already_valid_response.py  job_already_valid_response_status.py  job_list_item.py  job_list_item_status.py  job_list_item_treatment.py  job_list_response.py  job_result_response.py  job_result_response_after.py  job_result_response_before.py  job_result_response_certificate.py  job_result_response_status.py  job_result_response_treatment.py  job_status_response.py  job_status_response_error.py  job_status_response_status.py  usage_item.py  usage_item_treatment.py  usage_response.py
sdks/python/tests/: test_remediate.py  test_webhooks.py
(+63 files in other folders)
